Removal of core logic

--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,9 @@
 
     <repositories>
         <repository>
-        <id>codemc-repo</id>
-        <url>https://repo.codemc.io/repository/maven-public/</url>
-        <layout>default</layout>
+            <id>codemc-repo</id>
+            <url>https://repo.codemc.io/repository/maven-public/</url>
+            <layout>default</layout>
         </repository>
         <repository>
             <id>papermc-public</id>
@@ -111,6 +111,24 @@
             <version>${item-nbt.version}</version>
             <scope>provided</scope>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.mockbukkit.mockbukkit</groupId>
+            <artifactId>mockbukkit-v1.21</artifactId>
+            <version>4.98.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.11.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.7</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
