Add core RPG mode scaffolding

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,6 +8,10 @@ safeRegions:
   - SpawnCity
   - CityMarket
 
+vanillaOverrides:
+  disableVanillaMobSpawns: false
+  enforceNoPvp: true
+
 inventory:
   preferSharedEnderChest: false
 
